@@ -1,5 +1,10 @@
 2019-11-01  Steven G. Kargl  <kargl@gcc.gnu.org>
 
+	* decl.c (match_byte_typespec): New function.  Match BYTE type-spec.
+	(gfc_match_decl_type_spec): Use it.
+
+2019-11-01  Steven G. Kargl  <kargl@gcc.gnu.org>
+
 	PR fortran/90988
 	* decl.c (gfc_match_private, gfc_match_public): Fixed-form source code
 	does not require whitespace between PRIVATE (or PUBLIC) and an entity.
